--- a/pages/404.html
+++ b/pages/404.html
@@ -1,26 +1,24 @@
 <html>
- <head>
-  <title>Error page</title>
- </head>
+<head>
+<title>Ошибка 404</title>
+</head>
 <body>
-<center><h1>404 ERROR</h1></center>
-NOOOOOOOOOOOOOO!!!!!!
-<br/><br/>
-
-<br/><br/>
-<font style="color:green">I'm green</font>
-<br/><br/>
-<b>А этот текст выделен жирным</b>
-<br/><br/>
-А HTML - не такой уж и сложный
-<br/><br/>
-Теперь мне осталось изучить теги html, и я смогу уже создавать 
-страницы такими, какими я хочу.
-<hr>
-Этот материал был написан благодаря сайту 
-<a href=http://zarabotat-na-sajte.ru/>
-http://zarabotat-na-sajte.ru/</a> - за что я ему благодарен. 
-<br/><br/>
-До новых встреч!
+<p>К сожалению, запрашиваемая Вами страница не найдена..</p>
+<p>Почему?</p>
+<ol>
+<li>Ссылка, по которой Вы пришли, неверна.
+<li>Вы неправильно указали путь или название страницы.
+<li>Страница была удалёна со времени Вашего последнего посещения.
+</ol>
+<p>Для продолжения работы с сайтом Вы можете воспользоваться формой поиска по сайту:</p>
+<form>
+<input type="text" size="30">
+<input type="submit" value="Поиск">
+</form>
+<p>..или перейти на:</p>
+<ul>
+<li><a href="#">Главную страницу сайта.</a>
+<li><a href="#">Карту сайта</a>
+</ul>
 </body>
 </html>
